Fixed sorting in columnpicker, should not be a button

--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -41,7 +41,7 @@
                 {% include javascript/ms-toggle-columnpicker-option.html %}
                 <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--draggable">
                   <div class="itemBox__cellInner">
-                    <button class="itemBox__action">އ</button>
+                    <div class="itemBox__action">އ</div>
                   </div>
                 </li>
                 <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
