updated itembox structure

--- a/_includes/blocks/item-main/item-main-tab3.html
+++ b/_includes/blocks/item-main/item-main-tab3.html
@@ -1,4 +1,4 @@
-{% include blocks/itembox.html %}
+{% include blocks/itembox/itembox.html %}
 <div class="appl-sliders">
     <div class="appl-slider">
         <div class="appl-slider__header">
