fix wrong alignment in thead

--- a/_includes/blocks/itembox/itembox-inner.html
+++ b/_includes/blocks/itembox/itembox-inner.html
@@ -32,7 +32,7 @@
             <input class="field__input" type="text" placeholder="Assigned to">
           </div>
         </li>
-        <li class="itemBox__cell">
+        <li class="itemBox__cell flex-grow-3">
           <div class="itemBox__cellInner">
             <input class="field__input" type="text" placeholder="Reported by customer">
           </div>
