fix overlay hiding focus field

--- a/_includes/blocks/itembox/itembox-inner.html
+++ b/_includes/blocks/itembox/itembox-inner.html
@@ -1,4 +1,4 @@
-  <div class="itemBox animate-fadein JS_itemBox--children">
+  <div class="itemBox JS_itemBox--children">
     <header class="header header--table">
       <div class="header__title">
         <h2>Integrated Release Management</h2>
