fix overlay.css location

--- a/_includes/blocks/itembox/itembox-readonly.html
+++ b/_includes/blocks/itembox/itembox-readonly.html
@@ -1,6 +1,6 @@
-<header class="header header--section">
+<header class="header header--table">
   <div class="header__title">
-    <h3 class="truncate">table section header above itemBox</h3>
+    <h2>table section header above itemBox</h2>
   </div>
   <!-- header actions -->
   <div class="header__actions">
