--- a/sass/components.scss
+++ b/sass/components.scss
@@ -10,6 +10,7 @@
 @import "components/itembox.css";
 @import "components/multiSelector.css";
 @import "components/note.css";
+@import "components/overlay.css";
 @import "components/progress.css";
 @import "components/selector.css";
 @import "components/tabs.css";
