--- a/sass/components/headers.scss
+++ b/sass/components/headers.scss
@@ -196,6 +196,11 @@
   }
 
   &--table {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    
     &::after {
       display: none;
     }
