--- a/_includes/components/push.html
+++ b/_includes/components/push.html
@@ -22,4 +22,4 @@
 
 
 <!-- if it's a popup, add data-popid -->
-<a class="push {{go}} {{drop}} {{naked}} {{smallCaps}} mx-1" target="_blank" href="{{include.href}}"> {{include.title}}</a>
+<a class="push {{go}} {{drop}} {{naked}} {{smallCaps}} mx-1 my-1" target="_blank" href="{{include.href}}"> {{include.title}}</a>
