--- a/_includes/components/tabs-panels.html
+++ b/_includes/components/tabs-panels.html
@@ -1,4 +1,4 @@
-<!-- splitting up the data into multiple items. separator ;&&; -->
+{% comment %} splitting up the data into multiple items. separator ;&&; {% endcomment %}
 {% assign tabsData = include.data | split: ";&&;" %}
 
 <div class="tabs-panels p-2">
