--- a/_includes/components/tabs.html
+++ b/_includes/components/tabs.html
@@ -1,5 +1,5 @@
-<!-- selectedIndex can be one single ingeter starting from 1 in string -->
-<!-- default value is 1 -->
+{% comment %} selectedIndex can be one single ingeter starting from 1 in string {% endcomment %}
+{% comment %} default value is 1 {% endcomment %}
 {% assign selectedIndex = "1"  %}
 {% if include.selectedIndex %}
   {% assign selectedIndex = include.selectedIndex  %}
