--- a/_includes/components/unit.html
+++ b/_includes/components/unit.html
@@ -1,7 +1,7 @@
 
-<!-- getting the variables from the items. separator , -->
+{% comment %} getting the variables from the items. separator , {% endcomment %}
 {% assign itemData = include.item | split: "," %}
-<!-- assign color variable if there is a color -->
+{% comment %} assign color variable if there is a color {% endcomment %}
 {% assign color = "" %}
 {% if itemData[0] != "" %}
   {% assign color = "style='background-color: "| append: {{itemData[0]}} | append: ";'" %}
@@ -11,27 +11,27 @@
 {% assign label = itemData[2] %}
 {% assign field = itemData[3] %}
 
-<!-- assign variables for the length of items -->
+{% comment %} assign variables for the length of items {% endcomment %}
 {% assign colorSize = color | size %}
 {% assign prefixSize = prefix | size %}
 {% assign labelSize = label | size %}
 {% assign fieldSize = field | size %}
 
 
-<!-- only show item parts if they are at least 1 character long -->
-<!-- if there is a prefix or color, show prefix -->
+{% comment %} only show item parts if they are at least 1 character long {% endcomment %}
+{% comment %} if there is a prefix or color, show prefix {% endcomment %}
 {% if prefixSize > 0 or colorSize > 0 %}
   <div class="selector__blockPart selector__blockPart--prefix" {{color}} >{{prefix}}</div>
 {% endif %}
 
-<!-- if there is a label, show label -->
+{% comment %} if there is a label, show label {% endcomment %}
 {% if labelSize > 0 %}
   <div class="selector__blockPart selector__blockPart--label">{{label}}</div>
 {% endif %}
 
-<!-- if there is a field, show field -->
+{% comment %} if there is a field, show field {% endcomment %}
 {% if fieldSize > 0 %}
-  <!-- if there is a field AND a label, show blockSeparator -->
+  {% comment %} if there is a field AND a label, show blockSeparator {% endcomment %}
   {% if labelSize > 0 %}
     <div class="selector__blockSeperator"></div>
   {% endif %}
