--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -3,30 +3,30 @@
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/tailwind-custom.css">
 
 
-<!-- CDN OR USED PLUGINS NOT MADE BY US -->
-<!-- cdn for animations -->
+{% comment %} CDN OR USED PLUGINS NOT MADE BY US {% endcomment %}
+{% comment %} cdn for animations {% endcomment %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
 <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2/velocity.ui.min.js"></script>
 
-<!-- Plugins -->
+{% comment %} Plugins {% endcomment %}
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/clipboard.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/copy-clipboard.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
 
-<!-- Components -->
+{% comment %} Components {% endcomment %}
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/field.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/overlay.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/singleselect.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
 
-<!-- multiselect main-->
+{% comment %} multiselect main{% endcomment %}
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/multiselect-popup.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/multiselect-reset.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/multiselect.js"></script>
 
-<!-- multiselect plugins-->
+{% comment %} multiselect plugins{% endcomment %}
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-animation.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-calendar.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-colorselector.js"></script>
