--- a/_layouts/itembox.html
+++ b/_layouts/itembox.html
@@ -10,7 +10,7 @@
 
   {{ content }}
 
-  <!-- POPUPS -->
+  {% comment %} POPUPS {% endcomment %}
   {% include popups/multiSelector-columnpicker.html %}
 
   <div class="multiSelector" id="multiSelector-error">
