--- a/_includes/components/tabs-nav.html
+++ b/_includes/components/tabs-nav.html
@@ -1,8 +1,8 @@
-<!-- splitting up the data into multiple items. separator ; -->
+{% comment %} splitting up the data into multiple items. separator ; {% endcomment %}
 {% assign tabsData = include.data | split: ";" %}
 
-<!-- selectedIndex can be one single ingeter starting from 1 in string -->
-<!-- default value is 1 -->
+{% comment %} selectedIndex can be one single ingeter starting from 1 in string {% endcomment %}
+{% comment %} default value is 1 {% endcomment %}
 {% assign selectedIndex = "1"  %}
 {% if include.selectedIndex %}
   {% assign selectedIndex = include.selectedIndex  %}
@@ -35,4 +35,4 @@
     <span class="tabs-nav__slideCounter">9</span>
   </div>
 </div>
-<!-- /.tabs__nav -->
+{% comment %} /.tabs__nav {% endcomment %}
