--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,6 @@
 
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/theme-dark.css">
 
-<!-- jQuery -->
+{% comment %} jQuery {% endcomment %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/jquery-ui.min.js"></script>
