--- a/_layouts/future.html
+++ b/_layouts/future.html
@@ -10,16 +10,16 @@
 
     {% include foot.html %}
 
-    <!-- Libraries -->
+    {% comment %} Libraries {% endcomment %}
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.stickytableheaders.min.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/jquery.sticky.js"></script>
 
-    <!-- Plugins -->
+    {% comment %} Plugins {% endcomment %}
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/sticky.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/multiple-scrollable.js"></script>
 
-    <!-- Components -->
+    {% comment %} Components {% endcomment %}
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/semsearch.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
